--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -53,7 +53,7 @@
 \input{section/introduzione.tex}
 
 \cite{lmvTabu}
-
+\cite{lmvTspack}
 \section{Framework di esecuzione}
 \input{section/execution_framework}
 
