aggiunta matricola Dalla sistemati alcuni "errori" che non mi facevano compilare sostituito 2D bin packing con la macro apposita :P

--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -52,8 +52,11 @@
 \section{Introduzione}
 \input{section/introduzione.tex}
 
-\cite{lmvTabu}
-\cite{lmvTspack}
+\section{Tabu Search}
+\input{section/tabu}
+
+% \cite{lmvTabu}
+% \cite{lmvTspack}
 \section{Framework di esecuzione}
 \input{section/execution_framework}
 
