--- a/iaproject-2dbpp/relazione/section/introduzione.tex
+++ b/iaproject-2dbpp/relazione/section/introduzione.tex
@@ -1,5 +1,5 @@
 Lo scopo di tale relazione è quello di illustrare alcuni algoritmi
-metaeuristici per risolvere il problema del 2D Bin Packing; in particolare
+metaeuristici per risolvere il problema del \ddbp{}; in particolare
 attraverso l'euristica Bottom-Left-Fill (BLF) si sono scelti i seguenti:
 \begin{itemize}
 \item Genetico;
@@ -10,10 +10,9 @@ Inoltre si è realizzata l'interfaccia grafica per ottere un supporto che
 evidenziasse il comportamento di tali algoritmi.
 
 \subsection{Descrizione del problema}
-Il 2-D Bin Packing Problem (2-DBPP) con rotazioni è definito come
-segue: 
+Il \ddbpp{} (2-DBPP) con rotazioni è definito come segue:
 \begin{itemize}
-\item dato un insieme di n oggetti rettangolari di dimensioni h_{i} e w_{i}
+\item dato un insieme di n oggetti rettangolari di dimensioni $h_{i}$ e $w_{i}$
 che rappresentano rispettivamente l'altezza e la larghezza dell’oggetto
 i-esimo;
 \item dato un insieme illimitato di contenitori, ognuno dei quali ha altezza
@@ -42,7 +41,7 @@ Ogni algoritmo utilizzato in questa relazione ha la seguente struttura.
 INPUT:
 \begin{itemize}
   \item H e W dimensioni di tutti i bin;
-  \item h_{i} e w_{i} dimensioni dell’oggetto i-esimo;
+  \item $h_{i}$ e $w_{i}$ dimensioni dell’oggetto i-esimo;
 \end{itemize}
 
 OUTPUT:
