--- a/iaproject-2dbpp/relazione/titlepage.tex
+++ b/iaproject-2dbpp/relazione/titlepage.tex
@@ -22,7 +22,7 @@
 	\vskip 0.5cm
 	\begin{tabular}{ c c }
 		\large Nicola \textsc{Dalla Benetta} & Nicola \textsc{Gobbo} \\
-		\normalsize 999999 & 1014195 \\
+		\normalsize 1020097 & 1014195 \\
 	\end{tabular}
 	\normalfont
 	\vskip 4cm
