Capitolo tabu completato

--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -10,6 +10,7 @@
 \usepackage{amsmath}
 \usepackage{subfig}
 \usepackage{multirow}
+\usepackage{booktabs} % alcune caratteristiche aggiuntive tabelle
 
 \usepackage{listings}
 \lstset{
@@ -22,7 +23,6 @@
 	frame=single,
 	backgroundcolor=\color{gray},
 }
-
 
 \setenumerate[2]{label=\alph*.}
 
