integrata la sezione di urban sul BLF

--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -52,6 +52,9 @@
 \section{Introduzione}
 \input{section/introduzione.tex}
 
+\section{Euristica Bottom-Left-Fill}
+\input{section/blf_heuristic}
+
 \section{Tabu Search}
 \input{section/tabu}
 
